# Pointcloud

./: .gitignore  .gitmodules  BINARY_PROTOCOL.md  DEPLOYMENT_GUIDE.md  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/pointcloud/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/ground/: GroundUnit.cpp  GroundUnit.h
app/src/main/cpp/jni/: GroundBridge.cpp
app/src/main/java/com/example/pointcloud/: App.kt  AutoStartService.kt  BootReceiver.kt  GroundBridge.kt  MainActivity.kt  StatusStore.kt
app/src/main/java/com/example/pointcloud/net/: UdpToWebSocketService.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/pointcloud/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
